<resources>
    <string name="app_name">Real Russia Quiz</string>
    <string name="description">Bears, Balalaikas or Balls? \nSo you think you know the real Russia</string>
    <string name="startquiz">Start   🇷🇺</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="qone">How many military casualties did the Soviet Union suffer in WW2?</string>
    <string name="q1a1">400,000</string>
    <string name="q1a2">800,000</string>
    <string name="q1a3">10,000</string>
    <string name="q1a4">11,000,000</string>
    <string name="button">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
