<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/colorPrimary"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/qone"
        style="@style/Base.TextAppearance.AppCompat.Display1"/>


    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <RadioButton
            android:id="@+id/ra1"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1a1"
            style="@style/RadioButtonsDark"/>
        <RadioButton
            android:id="@+id/ra2"
            android:layout_toRightOf="@id/ra1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1a2"
            style="@style/RadioButtonsDark"/>
        <RadioButton
            android:id="@+id/ra3"
            android:layout_below="@id/ra1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1a3"
            style="@style/RadioButtonsDark"/>
        <RadioButton
            android:id="@+id/ra4"
            android:layout_below="@id/ra2"
            android:layout_toRightOf="@id/ra3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1a4"
            style="@style/RadioButtonsDark"/>
    </RadioGroup>
    <LinearLayout
        android:id="@+id/checkboxes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:visibility="gone">
        <CheckBox
            android:id="@+id/a1"
            android:text="@string/q1a1"
            android:layout_margin="16dp"
            android:layout_alignParentLeft="true"
            style="@style/CheckBoxDark"/>

        <CheckBox
            android:id="@+id/a2"
            android:text="@string/q1a2"
            android:layout_margin="16dp"
            android:layout_alignParentRight="true"
            style="@style/CheckBoxDark"/>
        <CheckBox
            android:id="@+id/a3"
            android:text="@string/q1a3"
            android:layout_below="@id/a1"
            android:layout_margin="16dp"
            style="@style/CheckBoxDark"/>
        <CheckBox
            android:id="@+id/a4"
            android:text="@string/q1a4"
            android:layout_margin="16dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/a2"
            android:layout_alignParentTop="@id/a2"
            style="@style/CheckBoxDark"/>
        <Button
            android:id="@+id/checkboxSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/edittextlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:layout_margin="16dp">
        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:textColorHint="@android:color/black"
            android:hint="Write your answer here"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"/>
        <Button
            android:id="@+id/editTextSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="25dp"
            android:text="@string/button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            />

    </RelativeLayout>
<!--TODO better alignment and spacing-->



</LinearLayout>
