<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"></FrameLayout>

    <TextView
        android:id="@+id/question"
        style="@style/Base.TextAppearance.AppCompat.Display1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:text="@string/qone"
        android:textAlignment="textStart"
        android:textColor="@android:color/white" />


    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/ra1"
            style="@style/RadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"

            android:text="@string/q1a1" />

        <RadioButton
            android:id="@+id/ra2"
            style="@style/RadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ra1"
            android:text="@string/q1a2" />

        <RadioButton
            android:id="@+id/ra3"
            style="@style/RadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ra1"
            android:text="@string/q1a3" />

        <RadioButton
            android:id="@+id/ra4"
            style="@style/RadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ra2"
            android:layout_toRightOf="@id/ra3"
            android:text="@string/q1a4" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/checkboxes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/a1"
            style="@style/CheckBox"
            android:layout_alignParentLeft="true"
            android:layout_margin="16dp"
            android:buttonTint="@android:color/white"
            android:text="@string/q1a1"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/a2"
            style="@style/CheckBox"
            android:layout_alignParentRight="true"

            android:layout_margin="16dp"
            android:buttonTint="@android:color/white"
            android:text="@string/q1a2"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/a3"
            style="@style/CheckBox"
            android:layout_below="@id/a1"
            android:layout_margin="16dp"
            android:buttonTint="@android:color/white"
            android:text="@string/q1a3"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/a4"
            style="@style/CheckBox"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="@id/a2"
            android:layout_below="@id/a2"
            android:layout_margin="16dp"
            android:buttonTint="@android:color/white"
            android:text="@string/q1a4"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/checkboxSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/edittextlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:visibility="gone">

        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:hint="Write your answer here"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
        <Button
            android:id="@+id/editTextSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="25dp"
            android:text="@string/button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            />

    </RelativeLayout>

    <!--TODO better alignment and spacing-->


</LinearLayout>
